# firefox-network-mcp-extension

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
extension/: background.js  manifest.json  popup.html  popup.js  xhr_hook_content.js
scripts/: install.sh
src/mcp_server/: __main__.py  request_store.py  server.py  tools.py  ws_bridge.py
tests/: conftest.py  test_connection_manager.py  test_request_store.py  test_safe_regex.py  test_server_integration.py  test_tools.py  test_ws_frame_store.py
